--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -21,3 +21,6 @@ sonar.sourceEncoding=UTF-8
 
 #covarage report
 sonar.javascript.lcov.reportPaths=__tests__/coverage/lcov.info
+
+#eslint
+sonar.eslint.eslintconfigpath=eslint.json
