--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -23,4 +23,4 @@ sonar.sourceEncoding=UTF-8
 sonar.javascript.lcov.reportPaths=__tests__/coverage/lcov.info
 
 #eslint
-sonar.eslint.eslintconfigpath=eslint.json
+# sonar.eslint.eslintconfigpath=eslint.json
