--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -24,3 +24,6 @@ sonar.javascript.lcov.reportPaths=__tests__/coverage/lcov.info
 
 #eslint
 # sonar.eslint.eslintconfigpath=eslint.json
+
+#
+sonar.scm.disabled=true
