--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -24,3 +24,11 @@ sonar.javascript.lcov.reportPaths=__tests__/coverage/lcov.info
 
 #eslint
 # sonar.eslint.eslintconfigpath=eslint.json
+
+#debug
+sonar.verbose=true 
+
+#Enable SCM
+sonar.scm.enabled=true 
+sonar.scm.disable=false 
+sonar.scm.provider=git 
